--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,145 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <title>4CGS Technologies</title>
+  <!-- Mobile Specific Meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <style>
+    body {
+      padding-top: 50px;
+    }
+    .navbar-brand img {
+      top: -15px;
+      position: relative;
+      width: 70px;
+      }
+    .navbar-inverse {
+      background-color: #014477;
+      border-color: #014477;
+      }
+    .navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+    }
+    .dropdown:hover .dropdown-menu {
+      display: block;
+    }
+    .dropdown-menu {
+      background-color: #014477;
+
+    }
+
+    .dropdown-menu li a{
+      color: #fff;
+    }
+    @media screen and (max-width : 480px){
+      .navbar-brand img {
+        display: none;
+      }
+    }
+  footer {
+    color: #84b7e2;
+    background: #18284e;
+    padding: 17px 0 18px 0;
+    border-top: 1px solid #000;
+  }
+  footer a {
+    color: #84b7e2;
+  }
+  footer a:hover {
+    color: #18284e;
+  }
+  .wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -63px;
+  }
+  .push {
+    height: 63px;
+  }
+  /* not required for sticky footer; just pushes hero down a bit */
+  .wrapper > .container {
+    padding-top: 60px;
+  }
+  
+  </style>
 </head>
 <body>
+	<nav class="navbar navbar-inverse navbar-fixed-top" id="main-navbar" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <a href="index.html" class="navbar-brand"><img src="/photo.JPG" width="70px"></a>
+      </div> <!-- end navbar-header -->
+
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <a href="#" class="btn btn-default navbar-btn navbar-right">Contact Us</a>
+
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">About</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Mission</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Vision</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products and services <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Data Center Services</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Enter Infrastructure Services</a></li>
+              <li class="divider"></li>
+              <li><a href="#">End User Services</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Software Services</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Web Services</a></li>
+              <li class="divider"></li>
+              <li><a href="#">LV Systems</a></li>
+              <li class="divider"></li>
+              <li><a href="#">E-Commerce</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Partners <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Panduit</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Partner 2</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Partner 3</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </div> <!-- end collapse -->
+    </div> <!-- end container -->
+  </nav>
+
+
 
 <%= yield %>
+
+<footer>
+    <div class="container"> 
+      <div>
+        <p>&copy; Copyright 2014.</p>
+      </div> <!-- end container -->
+    </div> 
+    </footer>
 
 </body>
 </html>
