issue for assets compile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bubai</title>
+  <title>4CGS</title>
   <%= csrf_meta_tags %>
   <title>4CGS Technologies</title>
   <!-- Mobile Specific Meta -->
