--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,56 +1,4 @@
-<div class="row">
-  <section>
-    <div class="carousel slide" id="gallery-carousel" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#gallery-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#gallery-carousel" data-slide-to="1"></li>
-            <li data-target="#gallery-carousel" data-slide-to="2"></li>
-          </ol>
-
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="/datacenter.jpg" alt="Slider image">
-              <div class="carousel-caption">This is a caption.</div>
-            </div>
-            <div class="item">
-              <img src="/servers.jpg" alt="Slider image">
-              <div class="carousel-caption">This is a caption.</div>
-            </div>
-            <div class="item">
-              <img src="/datacables.jpg" alt="Slider image">
-              <div class="carousel-caption">This is a caption.</div>
-            </div>
-          </div> <!-- end carousel-inner -->
-
-          <a href="#gallery-carousel" class="left carousel-control" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-          <a href="#gallery-carousel" class="right carousel-control" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </a>
-    </div> <!-- end carousel -->
-  </section>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center head-text">Who we are?</h2>
-      <hr>
-      <p>
-        4CGS, formed by a group of IT professionals with the objective of providing commendable IT solutions and associated after sales service to our clients all under a single roof. If it's anything about IT then it's 4CGS!
-      </p>
-    </div>
+ <div id="page_name" data-mercury="full" contenteditable="true">
+    <%= raw @page.content %>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center head-text">What we do?</h2>
-      <hr>
-      <p>
-        We specialize in providing IT products and services in various domains like IT infrastructure services where we meet all your network infra needs by providing design and installation of structured cabling, Active components, Uninterruptible power supply, Access Control System, CCTV system Networking, Security, Storage, Software services, Power and cooling solutions for data centers, all of these by partnering with the best brands in the world.
-      </p>
-      <p>
-        Our mission is to ensure that all products and services offered will be of the highest standards and also provide value for money to our clients and will help drive our client’s strategic business objectives.
-      </p>
-    </div>
-  </div>
-</div>
+  <p><%= link_to "Edit Page", "/editor/pages/1" , id: "edit_link", data: {save_url: mercury_update_page_path(@page)} %></p>
